# SMARTIE

./: .gitignore  CITATION.cff  LICENSE  README.md  cross_dataset_heatmap.py  pyproject.toml  requirements.txt  train_model.py
Brute_Force_Strategy/: brute_force_multitrain.py
Brute_Force_Strategy/Brute_Force_Plots/: assembled_figure.py  feature_ranking_all_kmax.py  kmax_best_combos.py
Brute_Force_Strategy/brute_force/: __init__.py  _types.py  _utils.py  combo_generator.py  evaluator.py  exceptions.py  feature_extractor.py  feature_registry.py  query.py  result_store.py  trainer.py
Metadata_Files_for_training_and_testing/: Testing_metadata.tsv  Training_metadata.tsv
docs/: ADVANCED.md
smartie_mnl/: __init__.py  _model.py  cross_dataset_heatmap.py  train_model.py
smartie_mnl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smartie_mnl/app/: __main__.py  app.py  launcher.py  utils.py
smartie_mnl/app/pages/: crosstest.py  home.py  predict.py  train.py  tutorial.py
smartie_mnl/models/: SMARTIE.pkl
