[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartie-mnl"
version = "1.0.0"
description = "SMARTIE: Machine-learning pipeline for predicting RNA-binding protein targets from TRIBE/STAMP editing data — Molecular Neuroscience Lab"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["TRIBE", "STAMP", "RNA-binding proteins", "A-to-I editing", "bioinformatics", "machine learning"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.32",
]

[project.optional-dependencies]
full = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[project.scripts]
SMARTIE       = "smartie_mnl.app.launcher:main"
smartie-train = "smartie_mnl.train_model:main"
smartie-test  = "smartie_mnl.cross_dataset_heatmap:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["smartie_mnl", "smartie_mnl.*"]

[tool.setuptools.package-data]
"smartie_mnl.app" = ["*.py"]
"smartie_mnl.app.pages" = ["*.py"]
